# ezmempass

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  Justfile  LANGUAGE_MODEL.md  NOTES.md  README.md  build.gradle  copyright.tmpl  mise.toml  rust-toolchain.toml  rustfmt.toml  settings.gradle
.cargo/: config.toml
.config/: clippy.toml  deny.toml  nextest.toml
.github/workflows/: ci.yml
apps/ezmempass-app/: Cargo.toml  README.md  Trunk.toml  index.html  package.json  tailwind.config.js
apps/ezmempass-app/public/: styles.scss
apps/ezmempass-app/src/: lib.rs  main.rs
apps/ezmempass-app/src/components/: mod.rs  navbar.rs  password_generator.rs  shell.rs
apps/ezmempass-app/src/pages/: help.rs  home.rs  mod.rs  not_found.rs  settings.rs
apps/ezmempass-app/tailwind/: input.css
apps/ezmempass-app/tests/: component_tests.rs
apps/ezmempass-cli/: Cargo.toml
apps/ezmempass-cli/src/: main.rs
cdk/: README.md  cdk.context.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts  static-site-cdk-stack.ts
cdk/test/: cdk.test.ts
docs/: AppIcon.ai  AppIconAndroid.ai  support_site.md
docs/privacy_policy/: error.html  index.html
docs/support_site/: index.html
flutter_app/: .gitignore  pubspec.yaml
flutter_app/android/: key.properties
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/asimihsan/flutter_app/: MainActivity.kt
flutter_app/android/gradle/wrapper/: gradle-wrapper.properties
flutter_app/assets/: help_en.md
flutter_app/ios/: exportOptions.plist
flutter_app/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/lib/: help_screen.dart  initial_intro.dart  main.dart  multiplatform_switch_list_tile.dart
flutter_app/lib/models/: preferences_model.dart
flutter_app/lib/widgets/: help_screen.dart  initial_intro.dart  initial_intro_card.dart  password_generator_app.dart  password_generator_widget.dart  settings_widget.dart
flutter_app/protos/: preferences.proto
flutter_app/test/: widget_test.dart
flutter_app/test_driver/: app.dart  app_test.dart
flutter_app_old/: pubspec.yaml  sylph.yaml
flutter_app_old/android/: build.gradle
flutter_app_old/android/app/: build.gradle
flutter_app_old/android/app/src/main/: AndroidManifest.xml
flutter_app_old/android/app/src/main/kotlin/com/asimihsan/flutter_app/: GeneratePassphraseFfi.kt  MainActivity.kt
flutter_app_old/android/app/src/profile/: AndroidManifest.xml
flutter_app_old/android/gradle/wrapper/: gradle-wrapper.properties
flutter_app_old/assets/: help_en.md  privacy_policy.md
flutter_app_old/ios/Runner/: Info.plist
flutter_app_old/ios/Runner.xcodeproj/: project.pbxproj
flutter_app_old/lib/: main.dart
flutter_app_old/lib/widgets/: initial_intro.dart  password_generator_app.dart  settings_widget.dart
libs/ezmempass-core/: Cargo.toml
libs/ezmempass-core/src/: error.rs  generator.rs  lib.rs  types.rs
libs/ezmempass-graph/: Cargo.toml
libs/ezmempass-graph/src/: error.rs  lib.rs  model.rs  search.rs
libs/ezmempass-models/: Cargo.toml
libs/ezmempass-models/src/: huggingface.rs  language.rs  lib.rs  parquet.rs
libs/ezmempass-worker/: Cargo.toml
libs/ezmempass-worker/src/: lib.rs
rust/: .gitignore  Cargo.toml
rust/lib/graph/: Cargo.toml
rust/lib/graph/src/: lib.rs
rust/lib/integer_coding/: Cargo.toml
rust/lib/integer_coding/src/: delta.rs  lib.rs
rust/lib/passwordgen/: Cargo.toml
rust/lib/passwordgen/benches/: passwordgen.rs
rust/lib/passwordgen/src/: lib.rs
rust/lib/passwordgen/tests/: test_generate_passphrase.rs
rust/lib/passwordgenffi/: Cargo.toml
rust/lib/passwordgenffi/src/: android.rs  lib.rs
tools/: dev-bootstrap.sh
