[package]
name = "ezmempass-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
ezmempass-core = { path = "../../libs/ezmempass-core" }
ezmempass-graph = { path = "../../libs/ezmempass-graph" }
ezmempass-models = { path = "../../libs/ezmempass-models" }
leptos = { version = "0.8.2", features = ["csr"] }
log = "0.4.27"
