[package]
name = "ezmempass-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
log = "0.4"

ezmempass-core = { path = "../../libs/ezmempass-core" }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlElement", "Text", "Element", "NodeList"] }
