[package]
name = "ezmempass-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core functionality for the EzMemPass password generator"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
rand = "0.9.1"

[dev-dependencies]
rstest.workspace = true
