[package]
name = "ezmempass-models"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Language model interfaces and implementations for EzMemPass"

[dependencies]
# Core library
ezmempass-core = { path = "../ezmempass-core" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

# Logging
tracing.workspace = true

# Parquet handling
arrow = "55.0.0"
parquet = "55.0.0"
datafusion = "47.0.0"
dirs = "6.0.0"

[dev-dependencies]
rstest.workspace = true
