[package]
name = "ezmempass-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ezmempass-core = { path = "../ezmempass-core" }
gloo-worker = {version = "0.5", features = ["futures"] }
wasm-bindgen = "0.2"

[lib]
# Build both artifacts so the code can be linked as Rust **and**
# emitted as a standalone Wasm bundle for the browser worker.
crate-type = ["rlib", "cdylib"]
