[package]
name = "passwordgenffi"
version = "0.1.0"
authors = ["Asim Ihsan <asim.ihsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "passwordgenffi"
crate-type = ["staticlib"]

[dependencies]
passwordgen = { path = "../passwordgen" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

# this dependency is only needed for Android.
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.14.0", default-features = false }
